Improving home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     "source.organizeImports": true
   },
   "css.lint.unknownAtRules": "ignore",
-  "scss.lint.validProperties": ["composes"]
+  "scss.lint.validProperties": ["composes"],
+  "prettier.printWidth": 120
 }
